syntax = "proto3";

package eventsStorage;

service EventsStorage {
  rpc getEvent (GetEventRequest) returns (GetEventResponse);
  rpc getEvents (GetEventsRequest) returns (GetEventsResponse);
}

message GetEventRequest {
  string event_id = 1;
}

message GetEventResponse {
  string eventType = 1;
  // string event_id = 1;
  // string event_type = 2;
  // string event_data = 3;
  // string source = 4;
  // int64 timestamp = 5;
  // bool success = 6;
  // string error = 7;
}

message GetEventsRequest {
  string eventType = 1;
  // string source = 2;
  // int64 start_timestamp = 3;
  // int64 end_timestamp = 4;
  // int32 limit = 5;
  // int32 offset = 6;
}

message GetEventsResponse {
  string eventType = 1;
  // int32 total = 2;
  // bool success = 3;
  // string error = 4;
}

message Event {
  string event_id = 1;
  string event_type = 2;
  string event_data = 3;
  string source = 4;
  int64 timestamp = 5;
} 